5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1723_2499.log
== TEST (2019-05-09 11:22:26) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
while(x == k -1):
	soma = 1 / x + 1
	x = x + 1
print(round(soma, 8))
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(soma, 8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:23:02) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
while(x == k - 1):
	soma = 1 / x + 1
	x = x + 1
print(round(soma, 8))
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(soma, 8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:23:32) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
while(x == k - 1):
	x = x + 1
	soma = 1 / x + 1
print(round(soma, 8))
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(soma, 8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:23:48) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
while(x == k - 1):
	x = x + 1
	soma = 1 / x 
print(round(soma, 8))
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(soma, 8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:24:00) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
while(x == k - 1):
	x = x + 1
	soma = 1 / x
print(round(soma, 8))
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(soma, 8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:24:18) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
while(x == k - 1):
	x = x + 1
	soma = 1 / x
print(round(soma, 8))
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(soma, 8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:24:22) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
while(x == k - 1):
	x = x + 1
	soma = 1 / x
print(round(soma, 8))
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(soma, 8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:25:20) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
while(x == k - 1):
	x = x + 1
	soma = 1 / factorial(x)
print(round(soma, 8))
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(soma, 8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:25:23) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
while(x == k - 1):
	x = x + 1
	soma = 1 / factorial(x)
print(round(soma, 8))
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(soma, 8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:28:26) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
while(x < k - 1):
	x = x + 1
	soma = 1 / factorial(x)
print(round(soma, 8))
	




-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:28:56) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
while(x <+ k - 1):
	x = x + 1
	soma = 1 / factorial(x)
print(round(soma, 8))
	




-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:29:01) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
while(x <= k - 1):
	x = x + 1
	soma = 1 / factorial(x)
print(round(soma, 8))
	




-- OUTPUT:
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:29:04) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
while(x <= k - 1):
	x = x + 1
	soma = 1 / factorial(x)
print(round(soma, 8))
	




-- OUTPUT:
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:29:29) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
while(x <= k - 1):
	x = x + 1
	soma = 1 / factorial(x)
print(round(soma, 8))
	




-- OUTPUT:
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:30:41) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
while(x <= k - 1):
	x = x + 1
	soma = 1 / factorial(x)
	total = soma + total
print(round(soma, 8))
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total = soma + total
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:31:01) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
soma = 0
while(x <= k - 1):
	x = x + 1
	soma = 1 / factorial(x)
	total = soma + total
print(round(soma, 8))
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = soma + total
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:31:14) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
soma = 0
total = 0
while(x <= k - 1):
	x = x + 1
	soma = 1 / factorial(x)
	total = soma + total
print(round(soma, 8))
	




-- OUTPUT:
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:31:18) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
soma = 0
total = 0
while(x <= k - 1):
	x = x + 1
	soma = 1 / factorial(x)
	total = soma + total
print(round(soma, 8))
	




-- OUTPUT:
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:31:30) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
soma = 0
total = 0
while(x <= k - 1):
	x = x + 1
	soma = 1 / factorial(x)
	total = soma + total
print(round(soma, 8))
	




-- OUTPUT:
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:35:18) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0
soma = 0
total = 0
while(x <= k - 1):
	x = x + 1
	soma = 1 / factorial(x)
	total = soma + 1 / factorial(x + 1)
print(round(total, 8))
	




-- OUTPUT:
0.00022321
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:37:14) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
x = 0

while(x <= k - 1):
	x = x + 1
	soma = 1 / factorial(x)
	soma = soma + 1 / factorial(x + 1)
print(round(soma, 8))
	




-- OUTPUT:
0.00022321
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:16) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + 1 / factorial(i)
	i = i + 1
print(round(e, 8))
	




-- OUTPUT:
2.71828183
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:30) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + 1 / factorial(i)
	i = i + 1
print(round(soma, 8))
	




-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:35) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + 1 / factorial(i)
	i = i + 1
print(round(soma, 8))
	




-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:38) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + 1 / factorial(i)
	i = i + 1
print(round(soma, 8))
	




-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:40) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + 1 / factorial(i)
	i = i + 1
print(round(soma, 8))
	




-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:43) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + 1 / factorial(i)
	i = i + 1
print(round(soma, 8))
	




-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:46) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + 1 / factorial(i)
	i = i + 1
print(round(soma, 8))
	




-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:46:53) 
-- CODE:
from math import *
k = int(input("Valor de k:"))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + 1 / factorial(i)
	i = i + 1
print(round(soma, 8))
	




-- EXECUTION TIME:
0.189231
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
